# howdy-island

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
data/: style.css
docs/: PACKAGING.md
packaging/: build.sh  howdy-island.launcher  howdy-island.service  howdy-island.spec
packaging/obs/: _service  debian.changelog  debian.control  debian.copyright  debian.rules
src/howdy_island/: __init__.py  __main__.py  app.py  cli.py  config.py  detector.py  events.py  osd.py
systemd/: howdy-island.service
